styled about page and somewhat fixed squished images

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -170,9 +170,10 @@
 }
 
 .pics {
-	height: 200px;
-	width: 200px;
+  max-height: 200px;
+  max-width: 200px;
 	margin-top: 4%;
+
 }
 
 #frogs {
